# ScratchPad

./: .gitignore  APD locus.ipynb  Fibonacci Spirals.ipynb  Lipschitzian modelling.ipynb  README.md  Reference vectors.ipynb  Untitled.ipynb  fast_nds.ipynb  nds.ipynb  numba1.html  numba2.html  numba_tests.csv  numba_tests_viz.ipynb  numpy vs list.ipynb  parallel_coords_error_bar.py  pyproject.toml  requirements.txt  temp-plot.html
apps/: parallel_coords_error_bar.py
biclustering plots/interactive plots/: 01 Generated data with block biclusters.html  02 Block bicluster dataset randomized.html  03 Parallel Coordinates with no clustering - block bicluster.html  04 Parallel Coordinates with Co-clustering - block bicluster.html  05 Parallel Coordinates with Bi-clustering - block bicluster.html  06 Generated data with checkerboard biclusters.html  07 Checkerboard bicluster dataset randomized.html  08 Parallel Coordinates with no clustering - checkerboard bicluster.html  09 Parallel Coordinates with Co-clustering - checkerboard bicluster.html  10 Parallel Coordinates with Bi-clustering - checkerboard bicluster.html  11 Parallel Coordinates with no clustering - Pareto optimal data.html  12 Parallel Coordinates with Co-clustering - Pareto optimal data.html  13 Parallel Coordinates with Bi-clustering - Pareto optimal data.html
