[tool.poetry]
name = "scratchpad"
version = "0.1.0"
description = "Just random experiments"
authors = ["Bhupinder Saini"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.7"
matplotlib = "^3.1"
seaborn = "^0.9.0"
numpy = "^1.17"
pandas = "^0.25.0"
jupyter = "^1.0"
plotly = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
