[tool.poetry]
name = "scratchpad"
version = "0.1.0"
description = ""
authors = ["Bhupinder@Work <bhupinder.s.saini@jyu.fi>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.1"
jupyter = "^1.0"
numpy = "^1.16"
altair = "^3.1"
vega_datasets = "^0.7.0"
notebook = "^5.7"
vega = "^2.3"
pandas = "^0.24.2"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
plotly = "^4.0"
pygmo = "^2.11"
scikit-learn = "^0.21.3"
dash = "^1.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
