[tool.poetry]
name = "scratchpad"
version = "0.1.0"
description = ""
authors = ["Bhupinder@Work <bhupinder.s.saini@jyu.fi>"]

[tool.poetry.dependencies]
python = ">=3.7.0,<3.10"
matplotlib = "^3.1"
numpy = "^1.16"
pandas = "^0.24.2"
black = {version = "^18.3-alpha.0",allow-prereleases = true}
plotly = "^4.0"
pygmo = "^2.11"
scikit-learn = "^0.21"
dash = "^1.8"
numba = "^0.53.0"
nbformat = "^5.1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipykernel = "^5.4.3"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
